# atsamd20e15a

./: .gdbinit  ATSAMD20E15.svd  Cargo.toml  README.md  atsamd20.cfg  memory.x  openocd_program.sh
examples/: blinky.rs  fading.rs  fading_glamour.rs  flicker_leds.rs  flicker_leds_48_mhz.rs  moving_sine.rs  ring_move.rs  running_leds_48_mhz.rs  sparkle_leds.rs  sparkle_leds_48_mhz.rs  whirlwind.rs
src/: common.rs  lib.rs  snowflake.rs  svd.rs
